Add input-list-specific taxonomy filters.